# haskell_bot

./: HaskellBot.cabal  LICENSE  README.md
src/: DataSources.hs  Gen.hs  Main.hs  TwitterSetup.hs
