name:               HaskellBot
version:            1.1.0
synopsis:           Bot criticizing Haskell
description:        Makes fun of Haskell/Functional Programming.
homepage:           https://www.github.com/andrewmichaud/haskell_bot.git
license:            BSD-3-Clause
license-file:       LICENSE
author:             Andrew Michaud
maintainer:         bots+haskell@mail.andrewmichaud.com
category:           Joke
build-type:         Simple
cabal-version:      1.24.2
extra-source-files: README.md

executable HaskellBot
    main-is:          Main.hs
    other-modules:    DataSources Gen TwitterSetup
    build-depends:    base >= 4.7.0, random >= 1.1,
                      twitter-conduit >= 0.2.0, bytestring >= 0.10.8.1,
                      text >= 1.2.2.0, aeson == 1.1.2.0,
                      twitter-types >= 0.7.2.2
    hs-source-dirs:   src
    default-language: Haskell2010
